--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <form action="" id="myForm">
         name: <input type="text" id="name"> <p id="nameWarning" class="alert alert-warning" ></p><br>
-        email   <input type="text" id="email"><p id="emailwarning">enteer email</p> <br>
+        email   <input type="text" id="email"><p id="emailwarning">enter email</p> <br>
         password: <input type="password" id="password"><p id="passwordWarning"></p><br>
         confirm password: <input type="password" id="confirm_password"><p id="confirmWarning"></p> <br>
         <input type="submit">
